[gd_scene load_steps=11 format=3 uid="uid://b8v40ha70irn5"]

[ext_resource type="Texture2D" uid="uid://bpp4jjt84srtg" path="res://icon.svg" id="1_6elc7"]
[ext_resource type="Script" path="res://main.gd" id="1_74n6x"]
[ext_resource type="Theme" uid="uid://c48cbhud52ks5" path="res://project_theme.theme" id="3_is53j"]
[ext_resource type="Script" path="res://valign.gd" id="4_hhe6y"]
[ext_resource type="Texture2D" uid="uid://bkfjbqqbshahc" path="res://addons/control++/icons/Documentation.svg" id="5_7ynqh"]
[ext_resource type="Texture2D" uid="uid://cjll4fqy6hd1" path="res://addons/control++/icons/Add.svg" id="6_33f2h"]

[sub_resource type="LabelSettings" id="LabelSettings_df58a"]
line_spacing = 0.0
font_size = 64

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_egaxk"]
bg_color = Color(0.227451, 0.227451, 0.227451, 1)
border_width_top = 10
border_color = Color(0.380392, 0.380392, 0.380392, 1)
border_blend = true

[sub_resource type="Theme" id="Theme_1wl5k"]
OptionButton/styles/normal = SubResource("StyleBoxFlat_egaxk")

[sub_resource type="RichTextEffect" id="RichTextEffect_fxh6l"]
script = ExtResource("4_hhe6y")

[node name="Main" type="Node"]
script = ExtResource("1_74n6x")

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 260.0
offset_top = 116.0
offset_right = 1048.0
offset_bottom = 802.0
columns = 2

[node name="ExpandableButton" type="ExpandableButton" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ExpandableButton2" type="ExpandableButton" parent="GridContainer"]
expansion_indentation = -50
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ExpandableButton3" type="ExpandableButton" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ExpandableButton4" type="ExpandableButton" parent="GridContainer"]
expansion_indentation = -134
layout_mode = 2
size_flags_vertical = 3

[node name="ExpandableButton5" type="ExpandableButton" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ExpandableButton6" type="ExpandableButton" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button2" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button3" type="Button" parent="GridContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Node2D" type="Node2D" parent="."]
visible = false
position = Vector2(800, 150)

[node name="GDExample" type="GDExample" parent="Node2D"]
position = Vector2(19.8254, 18.6127)
texture = ExtResource("1_6elc7")

[node name="ExpandableButton 2" type="ExpandableButton" parent="."]
expansion_indentation = -100
expansion_speed = 20.0
offset_left = 1098.0
offset_top = 703.0
offset_right = 1438.38
offset_bottom = 758.0

[node name="ExpandableButton 3" type="ExpandableButton" parent="."]
expansion_size = 170
expansion_indentation = 20
offset_left = 1098.0
offset_top = 759.0
offset_right = 1439.8
offset_bottom = 814.0
toggle_mode = true

[node name="RevisedButton3" type="RevisedButton2" parent="."]
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("3_is53j")

[node name="CheckButton" type="CheckButton" parent="RevisedButton3"]
layout_mode = 0
offset_top = 214.0
offset_right = 194.0
offset_bottom = 316.0
text = "Check Button
"

[node name="CheckBox" type="CheckBox" parent="RevisedButton3"]
layout_mode = 0
offset_top = 82.0
offset_right = 195.0
offset_bottom = 168.0
text = "Check Box Button"

[node name="RevisedButton" type="RevisedButton" parent="."]
vertical_text_alignment = 1
text = "[color=Pink][font_size=24]Tytuł[/font_size][color=VIOLET]
To jest bardzo fajny tekst wyświetlany na przycisku. 
To jest druga linia tego tekstu.
A to trzecia.
I czwarta.
A nawet piąta.
6
7
[/color][/color]"
visible = false
offset_left = 72.0
offset_top = 79.0
offset_right = 681.0
offset_bottom = 229.0
text = "[color=Pink][font_size=24]Tytuł[/font_size][color=VIOLET]
To jest bardzo fajny tekst wyświetlany na przycisku. 
To jest druga linia tego tekstu.
A to trzecia.
I czwarta.
A nawet piąta.
6
7
[/color][/color]"

[node name="Button" type="Button" parent="RevisedButton"]
layout_mode = 0
offset_left = 1130.0
offset_top = 30.0
offset_right = 1481.0
offset_bottom = 98.0
toggle_mode = true
text = "[color=VIOLET] Jakiś Tekst [/color]"
alignment = 0
expand_icon = true

[node name="Label" type="Label" parent="RevisedButton"]
visible = false
layout_mode = 0
offset_left = 185.0
offset_top = 198.0
offset_right = 498.0
offset_bottom = 254.0
text = "TO"
label_settings = SubResource("LabelSettings_df58a")

[node name="OptionButton" type="OptionButton" parent="RevisedButton"]
layout_mode = 0
offset_left = 736.0
offset_top = 248.0
offset_right = 888.0
offset_bottom = 279.0
theme = SubResource("Theme_1wl5k")
item_count = 3
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2

[node name="ExpandableButton" type="ExpandableButton" parent="RevisedButton"]
expansion_size = 140
expansion_indentation = 10
layout_mode = 0
offset_left = 1099.0
offset_top = 415.0
offset_right = 1293.0
offset_bottom = 557.0

[node name="ItemList" type="ItemList" parent="."]
offset_left = 83.0
offset_top = 443.0
offset_right = 171.0
offset_bottom = 710.0
item_count = 3
item_0/text = "lol"
item_1/text = "troll"
item_2/text = "koko"

[node name="Control" type="Control" parent="."]
visible = false
clip_contents = true
layout_mode = 3
anchors_preset = 0
offset_left = 254.0
offset_top = 457.0
offset_right = 864.0
offset_bottom = 682.0

[node name="VBoxContainer" type="PanelContainer" parent="Control"]
layout_mode = 0
offset_right = 607.0
offset_bottom = 231.0

[node name="RichTextLabel" type="RichTextLabel" parent="Control/VBoxContainer"]
layout_mode = 2
focus_mode = 2
bbcode_enabled = true
text = "LOL [s][color=yellow]LoL[/color][/s] 
ll
[font_size=12
]tekst mały[/font_size] [font_size=2
4]tekst duży[/font_size]
		Tekst z wcięciem












"
custom_effects = [SubResource("RichTextEffect_fxh6l")]
selection_enabled = true

[node name="Timer" type="Timer" parent="Control"]

[node name="HScrollBar" type="VScrollBar" parent="."]
visible = false
offset_left = 1031.0
offset_top = 82.0
offset_right = 1115.0
offset_bottom = 636.0
page = 12.0
value = 12.2011
allow_greater = true
allow_lesser = true

[node name="AutoScroll" type="AutoScroll" parent="HScrollBar"]
speed = 9.0
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MenuButton" type="MenuButton" parent="."]
visible = false
offset_left = 1248.0
offset_top = 251.0
offset_right = 1384.0
offset_bottom = 387.0
icon = ExtResource("1_6elc7")
icon_alignment = 1
vertical_icon_alignment = 2
switch_on_hover = true
item_count = 3
popup/item_0/text = "1"
popup/item_0/id = 0
popup/item_1/text = "2"
popup/item_1/id = 1
popup/item_2/text = "3"
popup/item_2/id = 2

[node name="RevisedButton2" type="RevisedButton" parent="."]
vertical_text_alignment = 1
text = "Show PopupMenu"
visible = false
offset_left = 592.0
offset_top = 328.0
offset_right = 715.0
offset_bottom = 401.0
text = "Show PopupMenu"

[node name="PopupMenu" type="PopupMenu" parent="."]
title = "popup"
initial_position = 4
size = Vector2i(100, 143)
unresizable = false
borderless = false
always_on_top = true
hide_on_item_selection = false
hide_on_checkable_item_selection = false
item_count = 5
item_0/text = "Item 1"
item_0/icon = ExtResource("5_7ynqh")
item_0/id = 0
item_1/text = "Item 2"
item_1/checkable = 1
item_1/id = 1
item_2/text = "Item 3"
item_2/checkable = 2
item_2/id = 2
item_3/text = "Item 4"
item_3/icon = ExtResource("6_33f2h")
item_3/id = 3
item_3/separator = true
item_4/text = "Item  5"
item_4/checkable = 2
item_4/checked = true
item_4/id = 4
item_4/disabled = true

[connection signal="minimum_size_changed" from="GridContainer/ExpandableButton" to="." method="_on_expandable_button_2_item_rect_changed"]
